[package]
name = "iroh-gossip-discovery"
version = "0.6.0"
edition = "2021"
license = "MPL-2.0"
description = "Discover iroh nodes via iroh-gossip"
homepage = "https://github.com/therishidesai/iroh-gossip-discovery"
repository = "https://github.com/therishidesai/iroh-gossip-discovery"
readme = "README.md"

[dependencies]
bytes = "1.10.1"
dashmap = "6.1.0"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
futures = "0.3"
iroh = { version = "0.92.0", features = ["discovery-local-network"] }
iroh-gossip = "0.92.0"
postcard = { version = "1.0", features = ["alloc"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[example]]
name = "address_book_demo"
path = "examples/address_book_demo.rs"
